--- a/styles.css
+++ b/styles.css
@@ -214,6 +214,16 @@
   }
 }
 
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 98;
+}
+
 .iframe-container {
   position: relative;
   width: 100%;
